implementations/rust/ockam/ockam/tests/node_test/fail_if_does_not_have_return_type.stderr
error: The function must have a return type
 --> $DIR/fail_if_does_not_have_return_type.rs:2:7
  |
2 | async fn my_test(ctx: &mut ockam_node::Context) {
  |       ^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> $DIR/fail_if_does_not_have_return_type.rs:1:1
  |
1 | / #[ockam::test]
2 | | async fn my_test(ctx: &mut ockam_node::Context) {
3 | |     ctx.address();
4 | | }
  | |_^ consider adding a `main` function to `$DIR/tests/node_test/fail_if_does_not_have_return_type.rs`
